--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,11 +1,54 @@
 #container {
-    width: 500px;
+    width: 60%;
     height: 800px;
     background-color: blue;
+    display: flex;
+    flex-direction: row;
+    margin-left: 130px;
+    margin-top: 20px;
+    justify-content: center;
+}
+
+#ct {
+    display: flex;
+    flex-direction: column;
+    width: 95%;
+    
 }
 
 .pgdoll {
     position: absolute;
     bottom: 25px;
     right: 50px;
+}
+
+#header {
+    height: 150px;
+    width: 100%;
+    background-color: red;
+    margin-top: 10px;
+}
+
+#content {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
+#left {
+    display: flex;
+    flex-direction: column;
+    width: 20%;
+    height: 500px;
+    background-color: blueviolet;
+    margin-top: 30px;
+}
+
+#right {
+    display: flex;
+    flex-direction: column;
+    width: 77%;
+    height: 500px;
+    background-color: burlywood;
+    margin-top: 30px;
 }
